@@ -1,0 +1,357 @@
+package Monitoring::GLPlugin::SNMP::MibsAndOids::CISCOLWAPPAPMIB;
+
+$Monitoring::GLPlugin::SNMP::MibsAndOids::origin->{'CISCO-LWAPP-AP-MIB'} = {
+  url => '',
+  name => 'CISCO-LWAPP-AP-MIB',
+};
+
+$Monitoring::GLPlugin::SNMP::MibsAndOids::mib_ids->{'CISCO-LWAPP-AP-MIB'} =
+    '1.3.6.1.4.1.9.9.513';
+
+$Monitoring::GLPlugin::SNMP::MibsAndOids::mibs_and_oids->{'CISCO-LWAPP-AP-MIB'} = {
+  ciscoLwappApMIB => '1.3.6.1.4.1.9.9.513',
+  ciscoLwappApMIBNotifs => '1.3.6.1.4.1.9.9.513.0',
+  ciscoLwappApMIBObjects => '1.3.6.1.4.1.9.9.513.1',
+  ciscoLwappAp => '1.3.6.1.4.1.9.9.513.1.1',
+  cLApTable => '1.3.6.1.4.1.9.9.513.1.1.1',
+  cLApEntry => '1.3.6.1.4.1.9.9.513.1.1.1.1',
+  cLApSysMacAddress => '1.3.6.1.4.1.9.9.513.1.1.1.1.1',
+  cLApIfMacAddress => '1.3.6.1.4.1.9.9.513.1.1.1.1.2',
+  cLApMaxNumberOfDot11Slots => '1.3.6.1.4.1.9.9.513.1.1.1.1.3',
+  cLApEntPhysicalIndex => '1.3.6.1.4.1.9.9.513.1.1.1.1.4',
+  cLApName => '1.3.6.1.4.1.9.9.513.1.1.1.1.5',
+  cLApUpTime => '1.3.6.1.4.1.9.9.513.1.1.1.1.6',
+  cLLwappUpTime => '1.3.6.1.4.1.9.9.513.1.1.1.1.7',
+  cLLwappJoinTakenTime => '1.3.6.1.4.1.9.9.513.1.1.1.1.8',
+  cLApMaxNumberOfEthernetSlots => '1.3.6.1.4.1.9.9.513.1.1.1.1.9',
+  cLApPrimaryControllerAddressType => '1.3.6.1.4.1.9.9.513.1.1.1.1.10',
+  cLApPrimaryControllerAddress => '1.3.6.1.4.1.9.9.513.1.1.1.1.11',
+  cLApSecondaryControllerAddressType => '1.3.6.1.4.1.9.9.513.1.1.1.1.12',
+  cLApSecondaryControllerAddress => '1.3.6.1.4.1.9.9.513.1.1.1.1.13',
+  cLApTertiaryControllerAddressType => '1.3.6.1.4.1.9.9.513.1.1.1.1.14',
+  cLApTertiaryControllerAddress => '1.3.6.1.4.1.9.9.513.1.1.1.1.15',
+  cLApLastRebootReason => '1.3.6.1.4.1.9.9.513.1.1.1.1.16',
+  cLApLastRebootReasonDefinition => 'CISCO-LWAPP-AP-MIB::cLApLastRebootReason',
+  cLApEncryptionEnable => '1.3.6.1.4.1.9.9.513.1.1.1.1.18',
+  cLApFailoverPriority => '1.3.6.1.4.1.9.9.513.1.1.1.1.19',
+  cLApFailoverPriorityDefinition => 'CISCO-LWAPP-AP-MIB::cLApFailoverPriority',
+  cLApPowerStatus => '1.3.6.1.4.1.9.9.513.1.1.1.1.20',
+  cLApPowerStatusDefinition => 'CISCO-LWAPP-AP-MIB::cLApPowerStatus',
+  cLApTelnetEnable => '1.3.6.1.4.1.9.9.513.1.1.1.1.21',
+  cLApSshEnable => '1.3.6.1.4.1.9.9.513.1.1.1.1.22',
+  cLApPreStdStateEnabled => '1.3.6.1.4.1.9.9.513.1.1.1.1.23',
+  cLApPwrInjectorStateEnabled => '1.3.6.1.4.1.9.9.513.1.1.1.1.24',
+  cLApPwrInjectorSelection => '1.3.6.1.4.1.9.9.513.1.1.1.1.25',
+  cLApPwrInjectorSelectionDefinition => 'CISCO-LWAPP-AP-MIB::cLApPwrInjectorSelection',
+  cLApPwrInjectorSwMacAddr => '1.3.6.1.4.1.9.9.513.1.1.1.1.26',
+  cLApWipsEnable => '1.3.6.1.4.1.9.9.513.1.1.1.1.27',
+  cLApMonitorModeOptimization => '1.3.6.1.4.1.9.9.513.1.1.1.1.28',
+  cLApMonitorModeOptimizationDefinition => 'CISCO-LWAPP-AP-MIB::cLApMonitorModeOptimization',
+  cLApDomainName => '1.3.6.1.4.1.9.9.513.1.1.1.1.29',
+  cLApNameServerAddressType => '1.3.6.1.4.1.9.9.513.1.1.1.1.30',
+  cLApNameServerAddress => '1.3.6.1.4.1.9.9.513.1.1.1.1.31',
+  cLApAMSDUEnable => '1.3.6.1.4.1.9.9.513.1.1.1.1.32',
+  cLApEncryptionSupported => '1.3.6.1.4.1.9.9.513.1.1.1.1.33',
+  cLApRogueDetectionEnabled => '1.3.6.1.4.1.9.9.513.1.1.1.1.34',
+  cLApTcpMss => '1.3.6.1.4.1.9.9.513.1.1.1.1.35',
+  cLApDataEncryptionStatus => '1.3.6.1.4.1.9.9.513.1.1.1.1.36',
+  cLApNsiKey => '1.3.6.1.4.1.9.9.513.1.1.1.1.37',
+  cLApAdminStatus => '1.3.6.1.4.1.9.9.513.1.1.1.1.38',
+  cLApPortNumber => '1.3.6.1.4.1.9.9.513.1.1.1.1.39',
+  cLApRetransmitCount => '1.3.6.1.4.1.9.9.513.1.1.1.1.40',
+  cLApRetransmitTimeout => '1.3.6.1.4.1.9.9.513.1.1.1.1.41',
+  cLApIfSmtParamTable => '1.3.6.1.4.1.9.9.513.1.1.2',
+  cLApIfSmtParamEntry => '1.3.6.1.4.1.9.9.513.1.1.2.1',
+  cLApIfSmtDot11Bssid => '1.3.6.1.4.1.9.9.513.1.1.2.1.1',
+  cLApCountryTable => '1.3.6.1.4.1.9.9.513.1.1.3',
+  cLApCountryEntry => '1.3.6.1.4.1.9.9.513.1.1.3.1',
+  cLApCountryCode => '1.3.6.1.4.1.9.9.513.1.1.3.1.1',
+  cLApCountryAllowed => '1.3.6.1.4.1.9.9.513.1.1.3.1.2',
+  ciscoLwappApIfRegulatoryDomainMismatchNotifEnabled => '1.3.6.1.4.1.9.9.513.1.1.4',
+  ciscoLwappApCrashEnabled => '1.3.6.1.4.1.9.9.513.1.1.5',
+  ciscoLwappApUnsupportedEnabled => '1.3.6.1.4.1.9.9.513.1.1.6',
+  ciscoLwappApAssociatedEnabled => '1.3.6.1.4.1.9.9.513.1.1.7',
+  ciscoLwappApIf => '1.3.6.1.4.1.9.9.513.1.2',
+  cLApDot11IfTable => '1.3.6.1.4.1.9.9.513.1.2.1',
+  cLApDot11IfEntry => '1.3.6.1.4.1.9.9.513.1.2.1.1',
+  cLApDot11IfSlotId => '1.3.6.1.4.1.9.9.513.1.2.1.1.1',
+  cLApDot11IfType => '1.3.6.1.4.1.9.9.513.1.2.1.1.2',
+  cLApDot11IfRegDomain => '1.3.6.1.4.1.9.9.513.1.2.1.1.3',
+  cLApDot11nSupport => '1.3.6.1.4.1.9.9.513.1.2.1.1.4',
+  cLAp11nChannelBandwidth => '1.3.6.1.4.1.9.9.513.1.2.1.1.5',
+  cLAp11nChannelBandwidthDefinition => 'CISCO-LWAPP-AP-MIB::cLAp11nChannelBandwidth',
+  cLApLomEnabled => '1.3.6.1.4.1.9.9.513.1.2.1.1.6',
+  cLApLomFirstChannel => '1.3.6.1.4.1.9.9.513.1.2.1.1.7',
+  cLApLomSecondChannel => '1.3.6.1.4.1.9.9.513.1.2.1.1.8',
+  cLApLomThirdChannel => '1.3.6.1.4.1.9.9.513.1.2.1.1.9',
+  cLApLomFourthChannel => '1.3.6.1.4.1.9.9.513.1.2.1.1.10',
+  cLApExtensionChannel => '1.3.6.1.4.1.9.9.513.1.2.1.1.11',
+  cLApLegacyBeamForming => '1.3.6.1.4.1.9.9.513.1.2.1.1.12',
+  cLApLegacyBeamFormingDefinition => 'CISCO-LWAPP-AP-MIB::cLApLegacyBeamForming',
+  cLApCdpOverAirEnabled => '1.3.6.1.4.1.9.9.513.1.2.1.1.13',
+  cLApDot11IfAdminStatus => '1.3.6.1.4.1.9.9.513.1.2.1.1.14',
+  cLApEthernetIfTable => '1.3.6.1.4.1.9.9.513.1.2.2',
+  cLApEthernetIfEntry => '1.3.6.1.4.1.9.9.513.1.2.2.1',
+  cLApEthernetIfSlotId => '1.3.6.1.4.1.9.9.513.1.2.2.1.1',
+  cLApEthernetIfName => '1.3.6.1.4.1.9.9.513.1.2.2.1.2',
+  cLApEthernetIfMacAddress => '1.3.6.1.4.1.9.9.513.1.2.2.1.3',
+  cLApEthernetIfAdminStatus => '1.3.6.1.4.1.9.9.513.1.2.2.1.4',
+  cLApEthernetIfAdminStatusDefinition => 'CISCO-LWAPP-AP-MIB::cLApEthernetIfAdminStatus',
+  cLApEthernetIfOperStatus => '1.3.6.1.4.1.9.9.513.1.2.2.1.5',
+  cLApEthernetIfOperStatusDefinition => 'CISCO-LWAPP-AP-MIB::cLApEthernetIfOperStatus',
+  cLApEthernetIfRxUcastPkts => '1.3.6.1.4.1.9.9.513.1.2.2.1.6',
+  cLApEthernetIfRxNUcastPkts => '1.3.6.1.4.1.9.9.513.1.2.2.1.7',
+  cLApEthernetIfTxUcastPkts => '1.3.6.1.4.1.9.9.513.1.2.2.1.8',
+  cLApEthernetIfTxNUcastPkts => '1.3.6.1.4.1.9.9.513.1.2.2.1.9',
+  cLApEthernetIfDuplex => '1.3.6.1.4.1.9.9.513.1.2.2.1.10',
+  cLApEthernetIfDuplexDefinition => 'CISCO-LWAPP-AP-MIB::cLApEthernetIfDuplex',
+  cLApEthernetIfLinkSpeed => '1.3.6.1.4.1.9.9.513.1.2.2.1.11',
+  cLApEthernetIfPOEPower => '1.3.6.1.4.1.9.9.513.1.2.2.1.12',
+  cLApEthernetIfPOEPowerDefinition => 'CISCO-LWAPP-AP-MIB::cLApEthernetIfPOEPower',
+  cLApEthernetIfRxTotalBytes => '1.3.6.1.4.1.9.9.513.1.2.2.1.13',
+  cLApEthernetIfTxTotalBytes => '1.3.6.1.4.1.9.9.513.1.2.2.1.14',
+  cLApEthernetIfInputCrc => '1.3.6.1.4.1.9.9.513.1.2.2.1.15',
+  cLApEthernetIfInputAborts => '1.3.6.1.4.1.9.9.513.1.2.2.1.16',
+  cLApEthernetIfInputErrors => '1.3.6.1.4.1.9.9.513.1.2.2.1.17',
+  cLApEthernetIfInputFrames => '1.3.6.1.4.1.9.9.513.1.2.2.1.18',
+  cLApEthernetIfInputOverrun => '1.3.6.1.4.1.9.9.513.1.2.2.1.19',
+  cLApEthernetIfInputDrops => '1.3.6.1.4.1.9.9.513.1.2.2.1.20',
+  cLApEthernetIfInputResource => '1.3.6.1.4.1.9.9.513.1.2.2.1.21',
+  cLApEthernetIfUnknownProtocol => '1.3.6.1.4.1.9.9.513.1.2.2.1.22',
+  cLApEthernetIfRunts => '1.3.6.1.4.1.9.9.513.1.2.2.1.23',
+  cLApEthernetIfGiants => '1.3.6.1.4.1.9.9.513.1.2.2.1.24',
+  cLApEthernetIfThrottle => '1.3.6.1.4.1.9.9.513.1.2.2.1.25',
+  cLApEthernetIfResets => '1.3.6.1.4.1.9.9.513.1.2.2.1.26',
+  cLApEthernetIfOutputCollision => '1.3.6.1.4.1.9.9.513.1.2.2.1.27',
+  cLApEthernetIfOutputNoBuffer => '1.3.6.1.4.1.9.9.513.1.2.2.1.28',
+  cLApEthernetIfOutputResource => '1.3.6.1.4.1.9.9.513.1.2.2.1.29',
+  cLApEthernetIfOutputUnderrun => '1.3.6.1.4.1.9.9.513.1.2.2.1.30',
+  cLApEthernetIfOutputErrors => '1.3.6.1.4.1.9.9.513.1.2.2.1.31',
+  cLApEthernetIfOutputTotalDrops => '1.3.6.1.4.1.9.9.513.1.2.2.1.32',
+  cLApEthernetIfCdpEnabled => '1.3.6.1.4.1.9.9.513.1.2.2.1.33',
+  cLApDot11RadioTable => '1.3.6.1.4.1.9.9.513.1.2.3',
+  cLApDot11RadioEntry => '1.3.6.1.4.1.9.9.513.1.2.3.1',
+  cLApDot11RadioMACAddress => '1.3.6.1.4.1.9.9.513.1.2.3.1.1',
+  cLApDot11RadioSubBand => '1.3.6.1.4.1.9.9.513.1.2.3.1.2',
+  cLApDot11RadioVersion => '1.3.6.1.4.1.9.9.513.1.2.3.1.3',
+  cLApDot11IsBackhaul => '1.3.6.1.4.1.9.9.513.1.2.3.1.4',
+  cLApDot11RadioRole => '1.3.6.1.4.1.9.9.513.1.2.3.1.5',
+  cLApDot11IfAntennaTable => '1.3.6.1.4.1.9.9.513.1.2.4',
+  cLApDot11IfAntennaEntry => '1.3.6.1.4.1.9.9.513.1.2.4.1',
+  cLApDot11IfAntennaId => '1.3.6.1.4.1.9.9.513.1.2.4.1.1',
+  cLApDot11IfAntennaTxEnable => '1.3.6.1.4.1.9.9.513.1.2.4.1.2',
+  cLApDot11IfAntennaRxEnable => '1.3.6.1.4.1.9.9.513.1.2.4.1.3',
+  cLApDot11IfAntennaEnable => '1.3.6.1.4.1.9.9.513.1.2.4.1.4',
+  cLApVlanIfTable => '1.3.6.1.4.1.9.9.513.1.2.5',
+  cLApVlanIfEntry => '1.3.6.1.4.1.9.9.513.1.2.5.1',
+  cLApVlanIfEthernetId => '1.3.6.1.4.1.9.9.513.1.2.5.1.1',
+  cLApVlanIfMode => '1.3.6.1.4.1.9.9.513.1.2.5.1.2',
+  cLApVlanIfModeDefinition => 'CISCO-LWAPP-AP-MIB::cLApVlanIfMode',
+  cLApVlanIfEnable => '1.3.6.1.4.1.9.9.513.1.2.5.1.3',
+  cLApVlanIfNativeVlanId => '1.3.6.1.4.1.9.9.513.1.2.5.1.4',
+  cLApVlanListTable => '1.3.6.1.4.1.9.9.513.1.2.6',
+  cLApVlanListEntry => '1.3.6.1.4.1.9.9.513.1.2.6.1',
+  cLApVlanListVlanId => '1.3.6.1.4.1.9.9.513.1.2.6.1.1',
+  cLApVlanListRowStatus => '1.3.6.1.4.1.9.9.513.1.2.6.1.2',
+  cLApDot11GlobalConfigTable => '1.3.6.1.4.1.9.9.513.1.2.7',
+  cLApDot11GlobalConfigEntry => '1.3.6.1.4.1.9.9.513.1.2.7.1',
+  cLApNwLegacyBeamForming => '1.3.6.1.4.1.9.9.513.1.2.7.1.1',
+  cLApNwLegacyBeamFormingDefinition => 'CISCO-LWAPP-AP-MIB::cLApNwLegacyBeamForming',
+  cLApNwTxPowerThreshold => '1.3.6.1.4.1.9.9.513.1.2.7.1.2',
+  ciscoLwappApGlobal => '1.3.6.1.4.1.9.9.513.1.3',
+  cLApFastHbTimerTable => '1.3.6.1.4.1.9.9.513.1.3.1',
+  cLApFastHbTimerEntry => '1.3.6.1.4.1.9.9.513.1.3.1.1',
+  cLApFastHbTimerApType => '1.3.6.1.4.1.9.9.513.1.3.1.1.1',
+  cLApFastHbTimerApTypeDefinition => 'CISCO-LWAPP-AP-MIB::cLApFastHbTimerApType',
+  cLApFastHbTimerTimeout => '1.3.6.1.4.1.9.9.513.1.3.1.1.2',
+  cLApFastHbTimerEnabled => '1.3.6.1.4.1.9.9.513.1.3.1.1.3',
+  cLApPrimaryDiscoveryTimeout => '1.3.6.1.4.1.9.9.513.1.3.3',
+  cLApGlobalPrimaryControllerAddressType => '1.3.6.1.4.1.9.9.513.1.3.4',
+  cLApGlobalPrimaryControllerAddress => '1.3.6.1.4.1.9.9.513.1.3.5',
+  cLApGlobalPrimaryControllerName => '1.3.6.1.4.1.9.9.513.1.3.6',
+  cLApGlobalSecondaryControllerAddressType => '1.3.6.1.4.1.9.9.513.1.3.7',
+  cLApGlobalSecondaryControllerAddress => '1.3.6.1.4.1.9.9.513.1.3.8',
+  cLApGlobalSecondaryControllerName => '1.3.6.1.4.1.9.9.513.1.3.9',
+  cLApGlobalFailoverPriority => '1.3.6.1.4.1.9.9.513.1.3.10',
+  cLApGlobalTcpMss => '1.3.6.1.4.1.9.9.513.1.3.11',
+  cLApGlobalDot11IfTable => '1.3.6.1.4.1.9.9.513.1.3.12',
+  cLApGlobalDot11IfEntry => '1.3.6.1.4.1.9.9.513.1.3.12.1',
+  cLApGlobalDot11IfCdpEnabled => '1.3.6.1.4.1.9.9.513.1.3.12.1.1',
+  cLApGlobalEthernetIfTable => '1.3.6.1.4.1.9.9.513.1.3.13',
+  cLApGlobalEthernetIfEntry => '1.3.6.1.4.1.9.9.513.1.3.13.1',
+  cLApGlobalEthernetIfCdpEnabled => '1.3.6.1.4.1.9.9.513.1.3.13.1.1',
+  cLApGlobalRetransmitCount => '1.3.6.1.4.1.9.9.513.1.3.14',
+  cLApGlobalRetransmitTimeout => '1.3.6.1.4.1.9.9.513.1.3.15',
+  ciscoLwappApCredentials => '1.3.6.1.4.1.9.9.513.1.4',
+  cLApCredentialGlobalUserName => '1.3.6.1.4.1.9.9.513.1.4.1',
+  cLApCredentialGlobalPassword => '1.3.6.1.4.1.9.9.513.1.4.2',
+  cLApCredentialGlobalSecret => '1.3.6.1.4.1.9.9.513.1.4.3',
+  cLApCredentialsTable => '1.3.6.1.4.1.9.9.513.1.4.4',
+  cLApCredentialsEntry => '1.3.6.1.4.1.9.9.513.1.4.4.1',
+  cLApCredentialUserName => '1.3.6.1.4.1.9.9.513.1.4.4.1.1',
+  cLApCredentialPassword => '1.3.6.1.4.1.9.9.513.1.4.4.1.2',
+  cLApCredentialSecret => '1.3.6.1.4.1.9.9.513.1.4.4.1.3',
+  cLApCredentialEnableGlobalCredentials => '1.3.6.1.4.1.9.9.513.1.4.4.1.4',
+  ciscoLwappLinkLatency => '1.3.6.1.4.1.9.9.513.1.5',
+  cLApLinkLatencyTable => '1.3.6.1.4.1.9.9.513.1.5.1',
+  cLApLinkLatencyEntry => '1.3.6.1.4.1.9.9.513.1.5.1.1',
+  cLApLinkLatencyEnable => '1.3.6.1.4.1.9.9.513.1.5.1.1.1',
+  cLApLinkLatencyReset => '1.3.6.1.4.1.9.9.513.1.5.1.1.2',
+  cLApLinkLatencyStatsTable => '1.3.6.1.4.1.9.9.513.1.5.2',
+  cLApLinkLatencyStatsEntry => '1.3.6.1.4.1.9.9.513.1.5.2.1',
+  cLApLinkLatencyStatsCurrent => '1.3.6.1.4.1.9.9.513.1.5.2.1.1',
+  cLApLinkLatencyStatsMin => '1.3.6.1.4.1.9.9.513.1.5.2.1.2',
+  cLApLinkLatencyStatsMax => '1.3.6.1.4.1.9.9.513.1.5.2.1.3',
+  cLApLinkLatencyTimeStamp => '1.3.6.1.4.1.9.9.513.1.5.2.1.4',
+  cLApDataLinkLatencyStatsCurrent => '1.3.6.1.4.1.9.9.513.1.5.2.1.5',
+  cLApDataLinkLatencyStatsMin => '1.3.6.1.4.1.9.9.513.1.5.2.1.6',
+  cLApDataLinkLatencyStatsMax => '1.3.6.1.4.1.9.9.513.1.5.2.1.7',
+  cLApDataLinkLatencyTimeStamp => '1.3.6.1.4.1.9.9.513.1.5.2.1.8',
+  ciscoLwappSpectrum => '1.3.6.1.4.1.9.9.513.1.6',
+  ciscoLwappAp802dot1xSupplicant => '1.3.6.1.4.1.9.9.513.1.7',
+  cLApGlobal802dot1xAuthenticationEnabled => '1.3.6.1.4.1.9.9.513.1.7.1',
+  cLApGlobal802dot1xSupplicantUsername => '1.3.6.1.4.1.9.9.513.1.7.2',
+  cLApGlobal802dot1xSupplicantPassword => '1.3.6.1.4.1.9.9.513.1.7.3',
+  cLAp802dot1xSupplicantTable => '1.3.6.1.4.1.9.9.513.1.7.4',
+  cLAp802dot1xSupplicantEntry => '1.3.6.1.4.1.9.9.513.1.7.4.1',
+  cLAp802dot1xSupplicantOverrideEnabled => '1.3.6.1.4.1.9.9.513.1.7.4.1.1',
+  cLAp802dot1xSupplicantOverrideUsername => '1.3.6.1.4.1.9.9.513.1.7.4.1.2',
+  cLAp802dot1xSupplicantOverridePassword => '1.3.6.1.4.1.9.9.513.1.7.4.1.3',
+  cLApSeClientTable => '1.3.6.1.4.1.9.9.513.1.8',
+  cLApSeClientEntry => '1.3.6.1.4.1.9.9.513.1.8.1',
+  cLApSeIndex => '1.3.6.1.4.1.9.9.513.1.8.1.1',
+  cLApSeClientUserName => '1.3.6.1.4.1.9.9.513.1.8.1.2',
+  cLApSeClientIPAddrType => '1.3.6.1.4.1.9.9.513.1.8.1.3',
+  cLApSeClientIPAddr => '1.3.6.1.4.1.9.9.513.1.8.1.4',
+  cLApSeClientDuration => '1.3.6.1.4.1.9.9.513.1.8.1.5',
+  cLApSeClientPort => '1.3.6.1.4.1.9.9.513.1.8.1.6',
+  ciscoLwappApMIBConform => '1.3.6.1.4.1.9.9.513.2',
+  ciscoLwappApMIBCompliances => '1.3.6.1.4.1.9.9.513.2.1',
+  ciscoLwappApMIBGroups => '1.3.6.1.4.1.9.9.513.2.2',
+  ciscoLwappApMIBNotifObjects => '1.3.6.1.4.1.9.9.513.3',
+  cLApAssocFailureReason => '1.3.6.1.4.1.9.9.513.3.1',
+  cLApRogueApMacAddress => '1.3.6.1.4.1.9.9.513.3.2',
+  cLApDot11RadioChannelNumber => '1.3.6.1.4.1.9.9.513.3.3',
+  cLApRogueApSsid => '1.3.6.1.4.1.9.9.513.3.4',
+  cLApRogueType => '1.3.6.1.4.1.9.9.513.3.5',
+  cLApRogueTypeDefinition => 'CISCO-LWAPP-AP-MIB::cLApRogueType',
+  cLApWipsReason => '1.3.6.1.4.1.9.9.513.3.6',
+  cLApWipsReasonDefinition => 'CISCO-LWAPP-AP-MIB::cLApWipsReason',
+  cLApWipsClear => '1.3.6.1.4.1.9.9.513.3.7',
+  cLApIfUpDownFailureType => '1.3.6.1.4.1.9.9.513.3.8',
+  cLApIfUpDownFailureTypeDefinition => 'CISCO-LWAPP-AP-MIB::cLApIfUpDownFailureType',
+  cLApIfUpDownCause => '1.3.6.1.4.1.9.9.513.3.9',
+  cLApIfUpDownFailureCode => '1.3.6.1.4.1.9.9.513.3.10',
+};
+
+$Monitoring::GLPlugin::SNMP::MibsAndOids::definitions->{'CISCO-LWAPP-AP-MIB'} = {
+  cLApPwrInjectorSelection => {
+    '1' => 'unknown',
+    '2' => 'installed',
+    '3' => 'override',
+  },
+  cLApLegacyBeamForming => {
+    '1' => 'enable',
+    '2' => 'disable',
+    '3' => 'notApplicable',
+  },
+  cLApVlanIfMode => {
+    '1' => 'normal',
+    '2' => 'access',
+    '3' => 'trunk',
+  },
+  cLApWipsReason => {
+    '1' => 'noMonitoringDevice',
+  },
+  cLApIfUpDownFailureType => {
+    '1' => 'detectedFailure',
+    '2' => 'configuredReset',
+  },
+  cLApRogueType => {
+    '1' => 'asleap',
+    '2' => 'honeypot',
+    '3' => 'other',
+  },
+  cLApMonitorModeOptimization => {
+    '1' => 'all',
+    '2' => 'tracking',
+    '3' => 'wips',
+    '4' => 'none',
+  },
+  cLApPowerStatus => {
+    '1' => 'low',
+    '2' => 'fifteendotfour',
+    '3' => 'sixteendoteight',
+    '4' => 'full',
+    '5' => 'external',
+    '6' => 'mixedmode',
+  },
+  cLApFailoverPriority => {
+    '1' => 'low',
+    '2' => 'medium',
+    '3' => 'high',
+    '4' => 'critical',
+  },
+  cLApEthernetIfOperStatus => {
+    '1' => 'up',
+    '2' => 'down',
+  },
+  cLApEthernetIfPOEPower => {
+    '1' => 'none',
+    '2' => 'drawn',
+    '3' => 'notdrawn',
+  },
+  cLApNwLegacyBeamForming => {
+    '1' => 'enable',
+    '2' => 'disable',
+    '3' => 'notApplicable',
+  },
+  cLApEthernetIfDuplex => {
+    '1' => 'unknown',
+    '2' => 'halfduplex',
+    '3' => 'fullduplex',
+    '4' => 'auto',
+  },
+  cLApFastHbTimerApType => {
+    '1' => 'local',
+    '2' => 'hreap',
+  },
+  cLApEthernetIfAdminStatus => {
+    '1' => 'up',
+    '2' => 'down',
+  },
+  cLAp11nChannelBandwidth => {
+    '1' => 'five',
+    '2' => 'ten',
+    '3' => 'twenty',
+    '4' => 'forty',
+  },
+  cLApLastRebootReason => {
+    '0' => 'none',
+    '1' => 'dot11gModeChange',
+    '2' => 'ipAddressSet',
+    '3' => 'ipAddressReset',
+    '4' => 'rebootFromController',
+    '5' => 'dhcpFallbackFail',
+    '6' => 'discoveryFail',
+    '7' => 'noJoinResponse',
+    '8' => 'denyJoin',
+    '9' => 'noConfigResponse',
+    '10' => 'configController',
+    '11' => 'imageUpgradeSuccess',
+    '12' => 'imageOpcodeInvalid',
+    '13' => 'imageCheckSumInvalid',
+    '14' => 'imageDataTimeout',
+    '15' => 'configFileInvalid',
+    '16' => 'imageDownloadError',
+    '17' => 'rebootFromConsole',
+    '18' => 'rapOverAir',
+    '19' => 'powerLow',
+    '20' => 'crash',
+    '21' => 'powerHigh',
+    '22' => 'powerLoss',
+    '23' => 'powerChange',
+    '24' => 'componentFailure',
+    '25' => 'watchdog',
+  },
+};
