@@ -1,0 +1,115 @@
+package Monitoring::GLPlugin::SNMP::MibsAndOids::CISCOLWAPPHAMIB;
+
+$Monitoring::GLPlugin::SNMP::MibsAndOids::origin->{'CISCO-LWAPP-HA-MIB'} = {
+  url => '',
+  name => 'CISCO-LWAPP-HA-MIB',
+};
+
+$Monitoring::GLPlugin::SNMP::MibsAndOids::mib_ids->{'CISCO-LWAPP-HA-MIB'} =
+    '1.3.6.1.4.1.9.9.198888';
+
+$Monitoring::GLPlugin::SNMP::MibsAndOids::mibs_and_oids->{'CISCO-LWAPP-HA-MIB'} = {
+  ciscoLwappHaMIB => '1.3.6.1.4.1.9.9.198888',
+  ciscoLwappHaMIBObjects => '1.3.6.1.4.1.9.9.198888.0',
+  ciscoLwappHaGlobalConfig => '1.3.6.1.4.1.9.9.198888.0.1',
+  cLHaApSsoConfig => '1.3.6.1.4.1.9.9.198888.0.1.1',
+  cLHaPeerIpAddressType => '1.3.6.1.4.1.9.9.198888.0.1.2',
+  cLHaPeerIpAddress => '1.3.6.1.4.1.9.9.198888.0.1.3',
+  cLHaServicePortPeerIpAddressType => '1.3.6.1.4.1.9.9.198888.0.1.4',
+  cLHaServicePortPeerIpAddress => '1.3.6.1.4.1.9.9.198888.0.1.5',
+  cLHaServicePortPeerIpNetMaskType => '1.3.6.1.4.1.9.9.198888.0.1.6',
+  cLHaServicePortPeerIpNetMask => '1.3.6.1.4.1.9.9.198888.0.1.7',
+  cLHaRedundancyIpAddressType => '1.3.6.1.4.1.9.9.198888.0.1.8',
+  cLHaRedundancyIpAddress => '1.3.6.1.4.1.9.9.198888.0.1.9',
+  cLHaPeerMacAddress => '1.3.6.1.4.1.9.9.198888.0.1.10',
+  cLHaVirtualMacAddress => '1.3.6.1.4.1.9.9.198888.0.1.11',
+  cLHaPrimaryUnit => '1.3.6.1.4.1.9.9.198888.0.1.12',
+  cLHaLinkEncryption => '1.3.6.1.4.1.9.9.198888.0.1.13',
+  cLHaNetworkFailOver => '1.3.6.1.4.1.9.9.198888.0.1.14',
+  cLHaRFStatusUnitIp => '1.3.6.1.4.1.9.9.198888.0.1.15',
+  cLHaKATimeout => '1.3.6.1.4.1.9.9.198888.0.1.16',
+  cLHaKARetryCount => '1.3.6.1.4.1.9.9.198888.0.1.17',
+  cLHaGwRetryCount => '1.3.6.1.4.1.9.9.198888.0.1.18',
+  cLHaPeerSearchTimeout => '1.3.6.1.4.1.9.9.198888.0.1.19',
+  ciscoLwappHaNetworkConfig => '1.3.6.1.4.1.9.9.198888.0.2',
+  cLHaNetworkRoutePeerConfigTable => '1.3.6.1.4.1.9.9.198888.0.2.1',
+  cLHaNetworkRoutePeerConfigEntry => '1.3.6.1.4.1.9.9.198888.0.2.1.1',
+  cLHaNetworkRoutePeerIPAddressType => '1.3.6.1.4.1.9.9.198888.0.2.1.1.1',
+  cLHaNetworkRoutePeerIPAddress => '1.3.6.1.4.1.9.9.198888.0.2.1.1.2',
+  cLHaNetworkRoutePeerIPNetmaskType => '1.3.6.1.4.1.9.9.198888.0.2.1.1.3',
+  cLHaNetworkRoutePeerIPNetmask => '1.3.6.1.4.1.9.9.198888.0.2.1.1.4',
+  cLHaNetworkRoutePeerGatewayType => '1.3.6.1.4.1.9.9.198888.0.2.1.1.5',
+  cLHaNetworkRoutePeerGateway => '1.3.6.1.4.1.9.9.198888.0.2.1.1.6',
+  cLHaNetworkRoutePeerTransferStatus => '1.3.6.1.4.1.9.9.198888.0.2.1.1.7',
+  cLHaNetworkRoutePeerTransferStatusDefinition => 'CISCO-LWAPP-HA-MIB::cLHaNetworkRoutePeerTransferStatus',
+  cLHaNetworkRoutePeerRowStatus => '1.3.6.1.4.1.9.9.198888.0.2.1.1.8',
+  ciscoLwappHaMIBNotifs => '1.3.6.1.4.1.9.9.198888.0.3',
+  ciscoLwappHaNotificationVariable => '1.3.6.1.4.1.9.9.198888.0.4',
+  cLHaSecondaryControllerUsageTrapType => '1.3.6.1.4.1.9.9.198888.0.4.1',
+  cLHaSecondaryControllerUsageTrapTypeDefinition => 'CISCO-LWAPP-HA-MIB::cLHaSecondaryControllerUsageTrapType',
+  cLHaSecondaryControllerUsageDayCounter => '1.3.6.1.4.1.9.9.198888.0.4.2',
+  cLHaBulkSyncCompleteEventStr => '1.3.6.1.4.1.9.9.198888.0.4.3',
+  cLHaPeerHotStandbyEventStr => '1.3.6.1.4.1.9.9.198888.0.4.4',
+  ciscoLwappHaPeerStatisticsVariable => '1.3.6.1.4.1.9.9.198888.0.5',
+  cLHaSystemStatistics => '1.3.6.1.4.1.9.9.198888.0.5.1',
+  cLHaCpuStatistics => '1.3.6.1.4.1.9.9.198888.0.5.1.1',
+  cLHaAllCpuUsage => '1.3.6.1.4.1.9.9.198888.0.5.1.1.1',
+  cLHaPowerSupplyStatistics => '1.3.6.1.4.1.9.9.198888.0.5.1.2',
+  cLHaPowerSupply1Present => '1.3.6.1.4.1.9.9.198888.0.5.1.2.1',
+  cLHaPowerSupply1PresentDefinition => 'CISCO-LWAPP-HA-MIB::cLHaPowerSupply1Present',
+  cLHaPowerSupply1Operational => '1.3.6.1.4.1.9.9.198888.0.5.1.2.2',
+  cLHaPowerSupply1OperationalDefinition => 'CISCO-LWAPP-HA-MIB::cLHaPowerSupply1Operational',
+  cLHaPowerSupply2Present => '1.3.6.1.4.1.9.9.198888.0.5.1.2.3',
+  cLHaPowerSupply2PresentDefinition => 'CISCO-LWAPP-HA-MIB::cLHaPowerSupply2Present',
+  cLHaPowerSupply2Operational => '1.3.6.1.4.1.9.9.198888.0.5.1.2.4',
+  cLHaPowerSupply2OperationalDefinition => 'CISCO-LWAPP-HA-MIB::cLHaPowerSupply2Operational',
+  cLHaMemoryStatistics => '1.3.6.1.4.1.9.9.198888.0.5.1.3',
+  cLHaTotalSystemMemory => '1.3.6.1.4.1.9.9.198888.0.5.1.3.1',
+  cLHaFreeSystemMemory => '1.3.6.1.4.1.9.9.198888.0.5.1.3.2',
+  cLHaUsedSystemMemory => '1.3.6.1.4.1.9.9.198888.0.5.1.3.3',
+  cLHaAllocatedFromRtos => '1.3.6.1.4.1.9.9.198888.0.5.1.3.4',
+  cLHaChunksFree => '1.3.6.1.4.1.9.9.198888.0.5.1.3.5',
+  cLHaMmappedRegions => '1.3.6.1.4.1.9.9.198888.0.5.1.3.6',
+  cLHaSpaceInMmappedRegions => '1.3.6.1.4.1.9.9.198888.0.5.1.3.7',
+  cLHaTotalAllocatedSpace => '1.3.6.1.4.1.9.9.198888.0.5.1.3.8',
+  cLHaTotalNotInUseSpace => '1.3.6.1.4.1.9.9.198888.0.5.1.3.9',
+  cLHaTopMostReleasableSpace => '1.3.6.1.4.1.9.9.198888.0.5.1.3.10',
+  cLHaTotalAllocatedInclMmap => '1.3.6.1.4.1.9.9.198888.0.5.1.3.11',
+  cLHaTotalUsedInclMmap => '1.3.6.1.4.1.9.9.198888.0.5.1.3.12',
+  cLHaTotalFreeInclMmap => '1.3.6.1.4.1.9.9.198888.0.5.1.3.13',
+  ciscoLwappHaStatisticsVariable => '1.3.6.1.4.1.9.9.198888.0.6',
+  cLHaAvgPeerReachLatency => '1.3.6.1.4.1.9.9.198888.0.6.1',
+  cLHaAvgGwReachLatency => '1.3.6.1.4.1.9.9.198888.0.6.2',
+  cLHaBulkSyncStatus => '1.3.6.1.4.1.9.9.198888.0.6.3',
+};
+
+$Monitoring::GLPlugin::SNMP::MibsAndOids::definitions->{'CISCO-LWAPP-HA-MIB'} = {
+  cLHaSecondaryControllerUsageTrapType => {
+    '1' => 'usageStart',
+    '2' => 'usageComplete',
+    '3' => 'overUsage',
+  },
+  cLHaPowerSupply1Present => {
+    '0' => 'false',
+    '1' => 'true',
+  },
+  cLHaPowerSupply1Operational => {
+    '0' => 'false',
+    '1' => 'true',
+  },
+  cLHaPowerSupply2Present => {
+    '0' => 'false',
+    '1' => 'true',
+  },
+  cLHaPowerSupply2Operational => {
+    '0' => 'false',
+    '1' => 'true',
+  },
+  cLHaNetworkRoutePeerTransferStatus => {
+    '1' => 'initiate',
+    '2' => 'inProgress',
+    '3' => 'success',
+    '4' => 'failure',
+    '5' => 'timeout',
+  },
+};
