@@ -1,5 +1,6 @@
 * 2017-02-07 2.3.12
   add CISCO-LWAPP-HA-MIB
+  add CISCO-LWAPP-AP-MIB
 * 2017-02-07 2.3.11
   add sysDesc to more uptime
 * 2017-02-07 2.3.10
